SERVER-29855 Pull major/minor from sys/sysmacros.h

Per newer versions of glibc:

----
error: In the GNU C Library, "major" is defined
 by <sys/sysmacros.h>. For historical compatibility, it is
 currently defined by <sys/types.h> as well, but we plan to
 remove this soon. To use "major", include <sys/sysmacros.h>
 directly. If you did not intend to use a system-defined macro
 "major", you should undefine it after including <sys/types.h>. [-Werror]
         string path = str::stream() << "/sys/dev/block/" << major(dev) << ':' << minor(dev)
----

Including <sys/sysmacros.h> appears to be the correct solution to quiet
the warning

(cherry picked from commit e245cac2b3c18015dee8caddd449532785d15c2b)